--- a/vignettes/example_tropical.Rmd
+++ b/vignettes/example_tropical.Rmd
@@ -31,13 +31,41 @@ Plot Digitizer^[Rohatgi, A. (2015) WebPlotDigitalizer: HTML5 Based Online Tool
       35, 0.0002), ncol = 2, byrow = TRUE)
 
 ## Finding models in the literature
+Before attempting to fit any model to the empirical data, the devRate function
+"devRateFind" search the database for previous articles fitting which models to
+the organism, either by Order, Family, or species.
 
+    devRateFind(orderSP = "Lepidoptera")
+    devRateFind(familySP = "Gelechiidae")
 
-The `html_vignette` template includes a basic CSS theme. To override this theme you can specify your own CSS in the document metadata as follows:
+Then, the "devRateInfo" function provides additional information on these models
+and on parameter estimations.
 
-    output:
-      rmarkdown::html_vignette:
-        css: mystyles.css
+    devRateInfo(eq = taylor_81)
+
+Information from the database can be plotted using the "devRatePlotInfo" function.
+
+    devRatePlotInfo (eq = taylor_81, sortBy = "ordersp",
+      ylim = c(0, 0.20), xlim = c(0, 50))
+
+## Fitting models to empirical datasets
+The empirical data can be fitted to any model in the database with the
+"devRateModel" function and empirical data plotted against the model using the
+"devRatePlot" function.
+
+    mEggs <- devRateModel(eq = taylor_81, temp = rawDevEggs[,1], devRate = rawDevEggs[,2],
+      startValues = list(Rm = 0.05, Tm = 30, To = 5))
+    mLarva <- devRateModel(eq = taylor_81, temp = rawDevLarva[,1], devRate = rawDevLarva[,2],
+      startValues = list(Rm = 0.05, Tm = 25, To = 5))
+    mPupa <- devRateModel(eq = taylor_81, temp = rawDevPupa[,1], devRate = rawDevPupa[,2],
+      startValues = list(Rm = 0.05, Tm = 30, To = 5))
+
+```{r, echo=FALSE, results='asis'}
+knitr::kable(data.frame(Stage = c("Eggs", "Larva", "Pupa"), model = rep("Taylor", 3),
+  Rm = c(0.1934, 0.06838, 0.0978), Rm_SE = c(0.01781, 0.009473, 0.0087),
+  Tm = c(25.3418, 21.40871, 22.0114), Tm_SE = c(0.76013, 0.729058, 0.4556),
+  To = c(-6.8939, 5.54497, -4.7515), To_SE = c(0.76853, 0.865261, 0.4715)))
+```
 
 ## Figures
 
@@ -59,12 +87,3 @@ Then you can use the chunk option `fig.cap = "Your figure caption."` in **knitr*
 ## More Examples
 
 You can write math expressions, e.g. $Y = X\beta + \epsilon$, footnotes^[A footnote here.], and tables, e.g. using `knitr::kable()`.
-
-```{r, echo=FALSE, results='asis'}
-knitr::kable(head(mtcars, 10))
-```
-
-Also a quote using `>`:
-
-> "He who gives up [code] safety for [code] speed deserves neither."
-([via](https://twitter.com/hadleywickham/status/504368538874703872))
